<resources>
    <string name="app_name">AppArteMadeira</string>
    <string name="title_activity_finance">FinanceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_finance">Finanças</string>
    <string name="pay">Pagar:</string>
    <string name="recive">Receber:</string>
    <string name="title">Title</string>
    <string name="category">Categoria:</string>
    <string name="categoryFild">Category Fild</string>
    <string name="valorFild">Valor Fild</string>
    <string name="value">Valor:</string>
    <string name="status">Status:</string>
    <string name="pending">Pendente</string>
    <string name="description">Descriçao:</string>
    <string name="descriptionFild">Description Fild</string>
    <string name="delete">Delete</string>
    <string name="paySwitch">Pago</string>
    <string name="todo2">TODO</string>
    <string name="add">Adicionar</string>
    <string name="name">Nome</string>
    <string name="billsToPay">Contas a pagar</string>
    <string name="billsToRecive">Contas a Receber</string>
    <string name="Type">Tipo</string>
    <string name="todo">TODO</string>


    <string-array name="categoryBillsToPay">
        <item>Despesas Da Pintura</item>
        <item>Energia</item>
        <item>Funcionário</item>
        <item>Material</item>
        <item>Frete da Mercadoria</item>
        <item>Empréstimo</item>
        <item>Investimento</item>
        <item>Cartão de Crédito</item>
        <item>Fornecedor</item>
        <item>Laser 1</item>
        <item>Laser 2</item>
        <item>Marcenaria</item>
    </string-array>

    <string-array name="categoryBillsToRecive">
        <item>Vendas em cartão</item>
        <item>Vendas em dinheiro</item>
        <item>Venas a prazo</item>

    </string-array>


</resources>